[workspace]
members = [
    "freertos-rust",
    "freertos-rust-examples",
    "cmacro",
]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[patch.crates-io]
bindgen = { git = "https://github.com/reitermarkus/rust-bindgen", branch = "cast-expr" }
cexpr = { git = "https://github.com/reitermarkus/rust-cexpr", branch = "cast-expr" }
