[workspace]

members = [
    "freertos-rust",
    "freertos-cargo-build",
    "freertos-rust-examples"
]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[patch.crates-io]
bindgen = { git = "https://github.com/reitermarkus/rust-bindgen", branch = "cmacro" }
cmacro = { git = "https://github.com/reitermarkus/cmacro-rs" }
