[package]
name = "freertos-rust"
version = "0.1.2"
authors = ["Tobias Kaupat <tk@lobaro.de>"]
edition = "2021"
description = """
Create to use FreeRTOS in rust projects.
The freertos-cargo-build crate can be used to build and link FreeRTOS from source inside build.rs.
"""
keywords = ["FreeRTOS", "embedded", "demo", "library"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lobaro/FreeRTOS-rust"
build = "build/mod.rs"
links = "freertos"

[lib]
name = "freertos_rust"
path = "src/lib.rs"

[features]
default = ["allocator", "sync", "time", "hooks", "interrupt"]
allocator = []
sync = ["interrupt"]
time = ["interrupt"]
hooks = []
interrupt = []

heap_1 = []
heap_2 = []
heap_3 = []
heap_4 = []

[dependencies]

[build-dependencies]
freertos-cargo-build = { path = "../freertos-cargo-build" }
bindgen = "0.60.1"
