[package]
name = "freertos-rust"
version = "0.1.2"
authors = ["Tobias Kaupat <tk@lobaro.de>"]
edition = "2021"
description = """
Create to use FreeRTOS in rust projects.
The freertos-cargo-build crate can be used to build and link FreeRTOS from source inside build.rs.
"""
keywords = ["FreeRTOS", "embedded", "demo", "library"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lobaro/FreeRTOS-rust"
build = "build/mod.rs"
links = "freertos"

[lib]
name = "freertos_rust"
path = "src/lib.rs"

[features]
default = ["alloc", "sync", "time", "interrupt"]
alloc = []
sync = ["interrupt"]
time = ["interrupt"]
interrupt = []

heap_1 = ["alloc"]
heap_2 = ["alloc"]
heap_3 = ["alloc"]
heap_4 = ["alloc"]
heap_5 = ["alloc"]

[dependencies]
critical-section = { version = "1.0", optional = true }
embedded-hal = "0.2"

[build-dependencies]
bindgen = { version = "0.66.0", features = ["experimental"] }
walkdir = "2"
cc = "1"
syn = "2"
